--- a/App/components/shared/header/burger-menu.html
+++ b/App/components/shared/header/burger-menu.html
@@ -59,11 +59,11 @@
                     </h3>
                 </accordion-heading>
                 <div ng-click="subMenu('sides','foodandsauces')" class="submenu-height">
-                    <a class="paddingbottom">Food & Sauces</a>
+                    <a class="paddingbottom">WINGS & SNACKS</a>
                     <i class="pull-right fa fa-angle-right" />
                 </div>
                 <div ng-click="subMenu('sides','drinks')" class="submenu-item-padding">
-                    <a class="paddingbottom">Drink</a>
+                    <a class="paddingbottom">DRINKS & SIDES</a>
                     <i class="pull-right fa fa-angle-right" />
                 </div>
             </accordion-group>
