--- a/App/components/shared/product/product-list.html
+++ b/App/components/shared/product/product-list.html
@@ -4,7 +4,7 @@
     <div class="row {{::headerClass}}">
         <h1 ng-if="hasTitle">{{::headerTitle}}</h1>
 
-        <select class="product-list-filter"
+        <!--<select class="product-list-filter"
                 ng-show="product.hasFilters"
                 ng-if="hasFilter"
                 ng-change="changeFilter()"
@@ -15,7 +15,7 @@
                     value="{{filter.value}}">
                 {{filter.name}}
             </option>
-        </select>
+        </select>-->
 
     </div>
 
