--- a/App/components/orderpage/order-menu/order-menu.html
+++ b/App/components/orderpage/order-menu/order-menu.html
@@ -10,10 +10,10 @@
 
 <div class="container product-filter">
     <div>
-        <button type="button" class="btn btn-filter btn-info btn-filter-pizzas" ng-class="{'filter-active': orderMenuTab.isSelected('pizzas')}" ng-click="orderMenuTab.selectSection('pizzas')">Pizzas</button>
-        <button type="button" class="btn btn-filter btn-info btn-filter-new" ng-class="{'filter-active': orderMenuTab.isSelected('new-products')}" ng-click="orderMenuTab.selectSection('new-products')">New <rb-order-menu-section-count product-section="newproducts"></rb-order-menu-section-count></button>
-        <button type="button" class="btn btn-filter btn-info btn-filter-deals" ng-class="{'filter-active': orderMenuTab.isSelected('deals') || orderMenuTab.isSelected('deal-detail')}" ng-click="orderMenuTab.selectSection('deals')">Deals</button>
-        <button type="button" class="btn btn-filter btn-info btn-filter-sides" ng-class="{'filter-active': orderMenuTab.isSelected('sides')}" ng-click="orderMenuTab.selectSection('sides')">Sides</button>
+        <button type="button" class="btn btn-filter btn-info btn-filter-pizzas" ng-class="{'filter-active': orderMenuTab.isSelected('pizzas')}" ng-click="orderMenuTab.selectSection('pizzas')">Bucket Meals</button>
+        <button type="button" class="btn btn-filter btn-info btn-filter-new" ng-class="{'filter-active': orderMenuTab.isSelected('new-products')}" ng-click="orderMenuTab.selectSection('new-products')">Individual Meals <rb-order-menu-section-count product-section="newproducts"></rb-order-menu-section-count></button>
+        <button type="button" class="btn btn-filter btn-info btn-filter-deals" ng-class="{'filter-active': orderMenuTab.isSelected('deals') || orderMenuTab.isSelected('deal-detail')}" ng-click="orderMenuTab.selectSection('deals')">Burgers</button>
+        <button type="button" class="btn btn-filter btn-info btn-filter-sides" ng-class="{'filter-active': orderMenuTab.isSelected('sides')}" ng-click="orderMenuTab.selectSection('sides')">Extras</button>
         <!--<button type="button" class="btn btn-filter btn-info btn-filter-favourites" ng-class="{'filter-active': order.isSelected('favourites')}" ng-click="order.selectSection('favourites')">My Favourites</button>-->
     </div>
 </div>
