--- a/App/components/orderpage/checkout/receipt-checkout.html
+++ b/App/components/orderpage/checkout/receipt-checkout.html
@@ -96,7 +96,7 @@
                         <table class="table cart-total" style="display:table;">
                             <thead ng-show="checkoutReceipt.receipt.order.hasPizza">
                                 <tr>
-                                    <th class="text-left">Pizza</th>
+                                    <th class="text-left">Order Item</th>
                                     <th class="text-center">Quantity</th>
                                     <th class="text-center">Price</th>
                                 </tr>
