--- a/App/components/shared/footer/footer.html
+++ b/App/components/shared/footer/footer.html
@@ -59,7 +59,7 @@
             <!-- Footer Row 2 -->
             <div class="row row-1 footer-row-2">
                 <ul>
-                    <li>&copy; 2015 Pizza Hut</li>
+                    <li>&copy; 2015 KFC</li>
                 </ul>
                 <ul>
                     <li><a target="_self" href="/opening-hours.html" ga="['send','event','Footer','{{footer.eventTrackingAction}}','Stores']">Store list</a></li>
