--- a/App/components/shared/header/burger-menu.html
+++ b/App/components/shared/header/burger-menu.html
@@ -10,11 +10,11 @@
     <li class="burger-title">
         <p> Menu</p>
     </li>
-    <li ng-click="selectSection('pizzas')">
-        <a>Pizza</a>
+    <li ng-click="selectSection('bucket-meals')">
+        <a>Bucket Meals</a>
         <i class="pull-right fa fa-angle-right" />
     </li>
-    <li ng-click="selectSection('new-products')">
+    <li ng-click="selectSection('individual-meals')">
         <a>New</a>
         &nbsp;
         <span class="display-num" ng-if="burgermenu.model.newProductCount >0"> {{burgermenu.model.newProductCount}}</span>
