--- a/App/components/shared/header/header.html
+++ b/App/components/shared/header/header.html
@@ -25,7 +25,7 @@
 
                     <!--Navigation List -->
                     <ul class="nav navbar-nav">
-                        <li><a href="/order/pizzas" target="_self" title="menu">MENU</a></li>
+                        <li><a href="/order/bucket-meals" target="_self" title="menu">MENU</a></li>
                         <li class="separator">|</li>
                         <li><a href="/order/deals" target="_self">Deals</a></li>
                         <li class="separator">|</li>
