--- a/Styles/custom/pizzahut-detailed.less
+++ b/Styles/custom/pizzahut-detailed.less
@@ -1,4 +1,12 @@
-﻿/* Updated Detaid Design styles */
+﻿
+@font-face {
+  font-family: 'Pakenham-Bold';
+  src: url('../fonts/Pakenham-Bold.eot?#iefix') format('embedded-opentype'),  url('../fonts/Pakenham-Bold.woff') format('woff'), url('../fonts/Pakenham-Bold.ttf')  format('truetype'), url('../fonts/Pakenham-Bold.svg#Pakenham-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Updated Detaid Design styles */
 @import "variable.less";
 
 html {
@@ -779,7 +787,7 @@ a.btn-log-in:hover {
 }
 
 .ui-widget, .ui-widget input, .ui-widget textarea {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     font-size: 14px;
 }
 
@@ -1337,7 +1345,7 @@ p.add-cart-to-favourites span.fa-heart {
 
 .toggle-map i {
     font-size: 14px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     font-style: normal;
     margin-left: 5px;
 }
@@ -1458,7 +1466,7 @@ p.add-cart-to-favourites span.fa-heart {
 /* #endregion product filder */
 
 .btn-filter span {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     color: #fff;
     background-color: #EA262E;
     padding: 4px 8px;
@@ -1647,7 +1655,7 @@ p.flip-me,
 .btn-quick-order,
 .description {
     text-align: center !important;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     font-style: normal;
     font-size: 14px;
     line-height: normal;
@@ -2121,7 +2129,7 @@ a.PromoLink {
 .edit-group a i {
     margin-left: 5px;
     font-style: normal;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Pakenham-Bold", "Source Sans Pro", sans-serif;
     font-size: 13px;
 }
 
@@ -4227,7 +4235,8 @@ i.myaccount-check-field-completed {
 
 
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    /*font-family: 'Pakenham-Bold', "Source Sans Pro", sans-serif;*/
+     font-family: 'Pakenham-Bold', "Source Sans Pro", sans-serif;
     position: relative;
     overflow-x: hidden;
     background: #302E2F url("/Images/background_200X200.jpg") repeat scroll left top;
@@ -4447,7 +4456,7 @@ body {
 }
 
 .desc-404 {
-    font-family: "Source Sans Pro" !important;
+    font-family: "Pakenham-Bold", "Source Sans Pro" !important;
     font-size: 16px;
     padding-left: 0;
 }
@@ -4467,7 +4476,7 @@ body {
 }
 
 .title-404 h1 {
-    font-family: "Source Sans Pro" !important;
+    font-family: "Pakenham-Bold","Source Sans Pro" !important;
     font-size: 85px;
     font-style: normal;
 }
