--- a/Views/Root/Home.cshtml
+++ b/Views/Root/Home.cshtml
@@ -10,7 +10,7 @@
 
     <!-- Order now -->
     <div class="wrapper-order-now">
-        <a class="btn btn-lg primary-order-now" href="/order/pizzas" role="button">View Menu</a>
+        <a class="btn btn-lg primary-order-now" href="/order/bucket-meals" role="button">View Menu</a>
     </div>
 
     <div class="product-list-homepage">
