--- a/Views/Shared/PageNotFound.cshtml
+++ b/Views/Shared/PageNotFound.cshtml
@@ -21,6 +21,6 @@
         </p>
         <hr/>
         <p>Here are some helpful links: </p>
-        <a href="/order/pizzas">Menu</a> <a href="/order/deals">Deals</a> <a href onclick="window.redirectToStore()">Stores</a>
+        <a href="/order/bucket-meals">Menu</a> <a href="/order/deals">Deals</a> <a href onclick="window.redirectToStore()">Stores</a>
 </div>
 </div>
