--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,10 +18,10 @@
 <html class="@browser @browserVersion ">
 <!--<![endif]-->
 <head>
-    <title>Pizza Hut</title>
+    <title>KFC</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/favicon_kfc.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-itunes-app" content="app-id=1030235266">
     <meta name="google-play-app" content="app-id=nz.co.pizzahut">
