--- a/Styles/rb/style.css
+++ b/Styles/rb/style.css
@@ -2,6 +2,14 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+
+@font-face {
+  font-family: 'Pakenham-Bold';
+  src: url('../fonts/Pakenham-Bold.eot?#iefix') format('embedded-opentype'),  url('../fonts/Pakenham-Bold.woff') format('woff'), url('../fonts/Pakenham-Bold.ttf')  format('truetype'), url('../fonts/Pakenham-Bold.svg#Pakenham-Bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,7 +56,7 @@ table {
 body {
   background: #262626;
   color: #fff;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Pakenham-Bold', "Source Sans Pro", sans-serif;
   padding: 18px 12px; }
 
 .wrapper {
@@ -148,7 +156,7 @@ h1 {
     font-weight: bold; }
 
 .allergen-info {
-  font-family: "Source Sans Pro", sans-serif; }
+  font-family: 'Pakenham-Bold', "Source Sans Pro", sans-serif; }
 
 h2 {
   font-size: 30px;
@@ -217,7 +225,7 @@ table {
       font-style: italic; }
 
 .nutritional-info {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Pakenham-Bold', "Source Sans Pro", sans-serif;
   padding: 18px 10px; }
   .nutritional-info .wrapper {
     max-width: 1400px;
